# pnr-history-copilot

./: .gitignore  .gitlab-ci.yml  AzureClient.py  AzureClient_test.py  ChatBotConfig.yml  README.md  app.py  result.csv
client/: README-client.md
client/app/: globals.css  layout.tsx  page.tsx
client/components/: BlobAnimation.tsx  BlobStatic.tsx  BrowsePdfButton.tsx  ConversationArea.tsx  FareRules.tsx  FlightInfoForm.tsx  FlightInfoSubForm.tsx  FlightNumberSubForm.tsx  Loading.ts  PnrUpload.tsx  PrevChatList.tsx  chatStore.ts  convButton.tsx  newChat.tsx  types.tsx
fare-rule-normalization-and-automation-main/: .gitignore  README.md
fare-rule-normalization-and-automation-main/final_version/: docker-compose.yml
fare-rule-normalization-and-automation-main/final_version/client/: Dockerfile-client  package-lock.json  package.json  tailwind.config.js
fare-rule-normalization-and-automation-main/final_version/nginx/: Dockerfile-nginx  (+1 more)
fare-rule-normalization-and-automation-main/streamlit_version/: previousCICD.yml
fare-rule-normalization-and-automation-main/streamlit_version/src/: Dockerfile  config.toml  pyproject.toml  streamlitnginxconf
fare-rule-normalization-and-automation-main/streamlit_version/src/app/: app.py  appV0.py  get_fare_rules_from_API.py  get_fare_rules_from_DB.py  scrapping.py  utils.py
nginx/: nginx.conf
server/: Dockerfile-server  main.py  website_list.xlsx
server/db/: db_flights_par_mad_doh.csv
server/functions/: answer_chat.py  generate_prompt.py  get_fare_rules_from_API.py  process_and_display_fares.py
server/utils/: utils.py
(+27 files in other folders)
